# nes-emulator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  conanfile.py  hh.cpp  packages.txt  th.js
.conan/: settings.yml
.github/workflows/: ci.yml  packages.txt
cmake/: conan.cmake  docker_build.cmake  download_roms.cmake  generate_shader_headers.cmake  macros.cmake  python.cmake
cpu-playground/src/: GuiContext.cpp  MemoryReader.cpp  main.cpp
cpu-tester/: CMakeLists.txt
cpu-tester/include/: GuiContext.h  MemoryDisplay.h
cpu-tester/include/src/: main.cpp
cpu-tester/include/windows/: MemoryReader.h  MemoryWindow.h  RegisterWindow.h
cpu-tester/src/: GuiContext.cpp  MemoryDisplay.cpp  main.cpp
cpu-tester/src/windows/: GuiWindow.cpp  MemoryReader.cpp  RegisterWindow.cpp
nes/: CMakeLists.txt
nes-lib/: CMakeLists.txt
nes-lib/include/: Apu.h  ApuFrameCounter.h  BackgroundRenderer.h  Bus.h  Cartridge.h  CircularBuffer.h  ColorPalette.h  Controller.h  Cpu.h  Definitions.h  Divider.h  DmcChannel.h  Envelope.h  ForegroundRenderer.h  FramePalette.h  IAudioOutputDevice.h  IController.h  IFrameDecoder.h  IRenderer.h  Instruction.h  LengthCounter.h  LookupTable.h  MirrorMode.h  NoiseChannel.h  NtscSignalGenerator.h  ObjectAttributeEntry.h  Oscilator.h  PixelColor.h  PixelInfo.h  PixelProcessingUnit.h  PixelProcessingUnitRegisterDefinitions.h  Ppu.h  PpuPort.h  PpuRegisterDefinitions.h  PulseChannel.h  PulseWaveGenerator.h  RAM.h  Ram.h  Sequencer.h  Shifter.h  (+4 more)
nes-lib/src/: ApproximateSine.cpp  ApproximateSine.h  Apu.cpp  ApuFrameCounter.cpp  BackgroundRenderer.cpp  Bus.cpp  Cartridge.cpp  ColorPalette.cpp  Controller.cpp  Cpu.cpp  Divider.cpp  DmcChannel.cpp  Envelope.cpp  ForegroundRenderer.cpp  FramePalette.cpp  Grid.cpp  LengthCounter.cpp  LookupTable.cpp  Mirror.cpp  Mirror.h  NoiseChannel.cpp  NtscSignalGenerator.cpp  Oscilator.cpp  PixelProcessingUnit.cpp  Ppu.cpp  PpuPort.h  Processor6502.cpp  PulseChannel.cpp  PulseWaveGenerator.cpp  Ram.cpp  Sequencer.cpp  Shifter.cpp  Sweeper.cpp  TriangleChannel.cpp  TriangleWaveGenerator.cpp
nes/include/: Controller.h  Definitions.h
nes/include/rendering/: Buffer.h  Grid.h  IFrameDecoder.h  Pixel.h  RenderContext.h  Shader.h  ShaderProgram.h  ShortTexture.h  SingleChannelShortTexture.h  Texture.h
nes/include/windows/: DisassamblerWindow.h  RegisterWindow.h
nes/shaders/: DisplayTexture.frag  Fragment.frag  FragmentShader.frag  Lookup.frag  NtscDecoder.frag  VertexShader.vert
nes/src/: ApuClockContext.cpp  ApuClockContext.h  ArgumentParser.cpp  ArgumentParser.h  AudioDevice.cpp  AudioDevice.h  Controller.cpp  ImGuiWindow.cpp  ImGuiWindow.h  LoadRomWindow.cpp  LoadRomWindow.h  Miniaudio.h  NesConfig.cpp  NesConfig.h  RingBuffer.cpp  RingBuffer.h  main.cpp
nes/src/rendering/: Buffer.cpp  Grid.cpp  LookupTableFrameDecoder.cpp  LookupTableFrameDecoder.h  LookupTableFrameDecoderGpu.cpp  LookupTableFrameDecoderGpu.h  NtscSignalFrameDecoder.cpp  NtscSignalFrameDecoder.h  NtscSignalFrameDecoderGpu.cpp  NtscSignalFrameDecoderGpu.h  OpenglObject.cpp  Pixel.cpp  RenderContext.cpp  Shader.cpp  ShaderProgram.cpp  ShortTexture.cpp  SingleChannelShortTexture.cpp  SingleChannelTexture.cpp  SingleChannelTexture.h  Sprite.cpp  Surface.cpp  Surface.h  Texture.cpp  Texture.h
nes/src/windows/: DisassamblerWindow.cpp  RegisterWindow.cpp
playground/: CMakeLists.txt
playground/include/: Definitions.h  Header.h  Rectangle.h  RenderContext.h  Shader.h  ShaderProgram.h  Vertex.h
playground/include/rendering/: Buffer.h  Grid.h  IBuffer.h  OpenglObject.h  Pixel.h  PixelColor.h  RenderContext.h  ShaderProgram.h  Sprite.h  Util.h  VertexArray.h
playground/include/windows/: GuiWindow.h  RegisterWindow.h
playground/shaders/: FragmentShader.frag  FragmentShader.glsl  VertexShader.glsl  VertexShader.vert
playground/src/: CircularBuffer.h  Divider.cpp  Envelope.h  Oscilator.cpp  Oscilator.h  PulseChannel.cpp  PulseChannel.h  Rectangle.cpp  RenderContext.cpp  Sequencer.h  Shader.cpp  ShaderProgram.cpp  main.cpp
playground/src/rendering/: Grid.cpp  Pixel.cpp  RenderContext.cpp  ShaderProgram.cpp  VertexArray.cpp
playground/src/windows/: DisassamblerWindow.cpp  RegisterWindow.cpp
processor-6502/: CMakeLists.txt
processor-6502/include/: Bus.h  Cartridge.h  ColorPalette.h  Controller.h  Definitions.h  Grid.h  Instruction.h  PixelProcessingUnit.h  PixelProcessingUnitRegisterDefinitions.h  Processor6502.h  RAM.h  Sprite.h
processor-6502/src/: Bus.cpp  Cartridge.cpp  ColorPalette.cpp  Controller.cpp  Grid.cpp  Pixel.cpp  PixelProcessingUnit.cpp  Processor6502.cpp
processor-6502/test/: BaseFixture.cpp  BaseFixture.h  Processor6502Proxy.cpp  Processor6502Proxy.h
scripts/: build-in-docker-container.py  generate-opcodes.py  generate-shader-headers.py  opcodes.txt
util/: CMakeLists.txt
util/include/: FLAGS6502.h  Util.h
util/src/: Util.cpp
(+344 files in other folders)
